# Proovy-ai

./: .gitignore  .pre-commit-config.yaml  langgraph.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug.md  feature.md
src/: run_agent.py  run_client.py  run_service.py  run_stream_client.py
src/agents/: __init__.py  agents.py  state.py
src/agents/prompts/: review_prompts.py
src/agents/tools/: __init__.py  e2b_runner.py
src/agents/workflows/: final_response.py  maingraph.py  review_logic.py  utils.py
src/agents/workflows/subgraphs/step1_preprocessing/: graph.py  preprocessing_utils.py  vision_llm.py
src/agents/workflows/subgraphs/step2_router/: graph.py
src/agents/workflows/subgraphs/step3_rag/: graph.py
src/agents/workflows/subgraphs/step4_features/: __init__.py
src/agents/workflows/subgraphs/step4_features/check/: graph.py
src/agents/workflows/subgraphs/step4_features/create_graph/: graph.py
src/agents/workflows/subgraphs/step4_features/explain/: graph.py
src/agents/workflows/subgraphs/step4_features/solution/: graph.py
src/agents/workflows/subgraphs/step4_features/solve/: graph.py
src/agents/workflows/subgraphs/step4_features/variant/: graph.py
src/client/: client.py
src/core/: __init__.py  llm.py  settings.py
src/memory/: __init__.py
src/schema/: __init__.py  models.py  schema.py
src/service/: service.py
